跳出的訊息有按鈕 同一個時間可以跳出多個訊息

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -22,6 +22,8 @@
   "execution_interval_input": "Execution Interval: {loopMin}",
   "execution_interval": "Execution Interval",
   "save": "Save",
+  "ok": "ok",
+  "skip": "skip",
   "monday": "Mon",
   "tuesday": "Tue",
   "wednesday": "Wed",
