--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -34,10 +34,10 @@
   "hour": "Hour",
   "minute": "Minute",
   "second": "Second",
-  "menu_1_help_1": "menu_1_help_1",
-  "menu_1_help_2": "menu_1_help_2",
-  "menu_2_help_1": "menu_2_help_1",
-  "menu_3_help_1": "menu_3_help_1",
+  "menu_today_help_1": "menu_today_help_1",
+  "menu_today_help_2": "menu_today_help_2",
+  "menu_settings_help_1": "menu_settings_help_1",
+  "menu_historical_help_1": "menu_historical_help_1",
   "task_edit_help_1": "task have 3 different types:\n1. duration type\n2. segmented type\n3. one time type",
   "task_edit_help_2": "blahblahblah",
   "task_edit_help_3": "cooooool",
