--- a/lib/l10n/intl_zh.arb
+++ b/lib/l10n/intl_zh.arb
@@ -34,10 +34,10 @@
   "hour": "時",
   "minute": "分",
   "second": "秒",
-  "menu_1_help_1": "menu 1 說明第一頁",
-  "menu_1_help_2": "menu 1 說明第二頁",
-  "menu_2_help_1": "menu 2 說明第一頁",
-  "menu_3_help_1": "menu 3 說明第一頁",
+  "menu_today_help_1": "menu today 說明第一頁",
+  "menu_today_help_2": "menu today 說明第二頁",
+  "menu_settings_help_1": "menu settings 說明第一頁",
+  "menu_historical_help_1": "menu historical 說明第一頁",
   "task_edit_help_1": "任務分三種類型:\n1.起訖類型\n2.分段類型\n3.一次性",
   "task_edit_help_2": "起訖類型任務需要設定\n開始時間及結束時間,\n若是想養成早睡早起的習慣,就適合把睡覺設定成起訖行任務\n又或是每日晚間養成定時讀書的習慣也很適合加入一個起訖型的任務",
   "task_edit_help_3": "分段類的任務適合放一些每日需要被階段完成的目標\n若訂下了每天需要喝足夠的水,從早上10點開始到晚上8點\n每隔40分鐘提醒\n或是每日做100下伏地挺身\n也可以讓程式協助分段提醒",
