重設按鈕及說明

--- a/lib/l10n/intl_zh.arb
+++ b/lib/l10n/intl_zh.arb
@@ -1,7 +1,7 @@
 {
   "@@locale": "zh",
   "menu_today_progress": "今日進度",
-  "menu_project_settings": "計畫設定",
+  "menu_schedule_settings": "計畫設定",
   "menu_completion_records": "完成紀錄",
   "title_daily_plan_settings": "一日計畫設定",
   "title_task_nof_settings": "任務及通知設定",
@@ -21,6 +21,7 @@
   "trigger_time": "觸發時間: {triggerTime}",
   "execution_interval_input": "執行間格: {loopMin}",
   "execution_interval": "執行間格",
+  "scheduled_days": "執行日",
   "save": "儲存",
   "ok": "確定",
   "skip": "跳過",
@@ -42,6 +43,8 @@
   "task_edit_help_2": "起訖類型任務需要設定\n開始時間及結束時間,\n若是想養成早睡早起的習慣,就適合把睡覺設定成起訖行任務\n又或是每日晚間養成定時讀書的習慣也很適合加入一個起訖型的任務",
   "task_edit_help_3": "分段類的任務適合放一些每日需要被階段完成的目標\n若訂下了每天需要喝足夠的水,從早上10點開始到晚上8點\n每隔40分鐘提醒\n或是每日做100下伏地挺身\n也可以讓程式協助分段提醒",
   "task_edit_help_4": "一次型的任務只須設定一個時間點,讓程式提醒你去做某件事\n像是每天早上10點要記得煮水或是晚上10點要關玄關的燈\n各種執行起來不會花太多時間又或是容易忘記的事情都很適合加入",
+  "reset_help": "通知會在某些狀況下失靈,\n像是重開機,開飛航\n當通知失靈後可以按下重設按鈕讓一切恢復正常",
+  "reset": "重設",
   "error_no_settings_made": "無任何設定無須儲存",
   "error_no_plan_name": "請輸入計畫名稱",
   "error_no_task_name": "請輸入任務名稱",
