--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1,7 +1,7 @@
 {
   "@@locale": "en",
   "menu_today_progress": "Today's Progress",
-  "menu_project_settings": "Project Settings",
+  "menu_schedule_settings": "Schedule Settings",
   "menu_completion_records": "Completion Records",
   "title_daily_plan_settings": "Daily Plan Settings",
   "title_task_nof_settings": "Task and Notification Settings",
@@ -21,6 +21,7 @@
   "trigger_time": "Trigger Time: {triggerTime}",
   "execution_interval_input": "Execution Interval: {loopMin}",
   "execution_interval": "Execution Interval",
+  "scheduled_days": "Scheduled Days",
   "save": "Save",
   "ok": "ok",
   "skip": "skip",
@@ -42,6 +43,8 @@
   "task_edit_help_2": "blahblahblah",
   "task_edit_help_3": "cooooool",
   "task_edit_help_4": "ok",
+  "reset_help": "Notifications may fail in certain situations,\nsuch as after a reboot, enabling airplane mode, or due to a bug.\nWhen notifications fail, pressing the reset button can help restore normal functionality.",
+  "reset": "reset",
   "error_no_settings_made": "No settings made.",
   "error_no_plan_name": "No plan name.",
   "error_no_task_name": "Please enter task name.",
