--- a/lib/l10n/intl_zh.arb
+++ b/lib/l10n/intl_zh.arb
@@ -45,6 +45,7 @@
   "task_edit_help_4": "一次型的任務只須設定一個時間點,讓程式提醒你去做某件事\n像是每天早上10點要記得煮水或是晚上10點要關玄關的燈\n各種執行起來不會花太多時間又或是容易忘記的事情都很適合加入",
   "reset_help": "通知會在某些狀況下失靈,\n像是重開機,開飛航\n當通知失靈後可以按下重設按鈕讓一切恢復正常",
   "reset": "重設",
+  "currently_executing": "現正執行",
   "error_no_settings_made": "無任何設定無須儲存",
   "error_no_plan_name": "請輸入計畫名稱",
   "error_no_task_name": "請輸入任務名稱",
