修改英文翻譯

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -6,13 +6,13 @@
   "title_daily_plan_settings": "Daily Plan Settings",
   "title_task_nof_settings": "Task and Notification Settings",
   "input_plan_name": "Enter Plan Name",
-  "input_ex_plan_name": "EX: work smart day",
+  "input_ex_plan_name": "EX: On-time Leaving Plan",
   "input_task_name": "Enter Task Name",
-  "input_ex_task_name": "EX: Study",
+  "input_ex_task_name": "EX: Regular Study",
   "task_type": "Task Type:",
-  "duration_type": "Duration Type",
-  "one_time_type": "One-time Type",
-  "segmented_type": "Segmented Type",
+  "duration_type": "Duration",
+  "one_time_type": "One-time",
+  "segmented_type": "Segmented",
   "choose_start_time": "Choose Start Time: ",
   "start_time": "Start Time: {startTime}",
   "choose_end_time": "Choose End Time: ",
@@ -39,19 +39,19 @@
   "menu_today_help_2": "menu_today_help_2",
   "menu_settings_help_1": "menu_settings_help_1",
   "menu_historical_help_1": "menu_historical_help_1",
-  "task_edit_help_1": "task have 3 different types:\n1. duration type\n2. segmented type\n3. one time type",
-  "task_edit_help_2": "blahblahblah",
-  "task_edit_help_3": "cooooool",
-  "task_edit_help_4": "ok",
-  "reset_help": "Notifications may fail in certain situations,\nsuch as after a reboot, enabling airplane mode.\nWhen notifications fail, pressing the reset button can help restore normal functionality.",
+  "task_edit_help_1": "Tasks are divided into three types:\n1. Duration type\n2. Segmented type\n3. One-time",
+  "task_edit_help_2": "Duration type tasks require setting\nstart time and end time.\nIf you want to develop a habit of going to bed and getting up early, it is suitable to set sleep as a duration task.\nOr, if you want to develop a habit of reading every evening, it is also suitable to add a duration task.",
+  "task_edit_help_3": "Segmented tasks are suitable for goals that need to be completed in stages daily.\nIf you set a goal to drink enough water every day, from 10 am to 8 pm,\nremind every 40 minutes.\nOr, if you want to do 100 push-ups every day,\nthe program can assist with segmented reminders.",
+  "task_edit_help_4": "One-time tasks only need to set a specific time to remind you to do something.\nFor example, remember to boil water at 10 am every day or turn off the porch light at 10 pm.\nTasks that don't take much time to execute or are easy to forget are very suitable to add.",
+  "reset_help": "Notifications may fail under certain circumstances,\nsuch as rebooting, turning on airplane mode.\nWhen notifications fail, you can press the reset button to restore everything to normal.",
   "reset": "reset",
   "currently_executing": "Currently Executing",
-  "error_no_settings_made": "No settings made.",
-  "error_no_plan_name": "No plan name.",
-  "error_no_task_name": "Please enter task name.",
-  "error_no_task_type": "Please enter task type.",
-  "error_no_start_time": "Please set start time.",
-  "error_no_end_time": "Please set end time.",
-  "error_no_execution_interval": "Please set execution interval.",
-  "error_no_trigger_time": "Please set trigger time."
+  "error_no_settings_made": "No settings made, no need to save.",
+  "error_no_plan_name": "Please enter the plan name.",
+  "error_no_task_name": "Please enter the task name.",
+  "error_no_task_type": "Please select the task type.",
+  "error_no_start_time": "Please set the start time.",
+  "error_no_end_time": "Please set the end time.",
+  "error_no_execution_interval": "Please set the execution interval.",
+  "error_no_trigger_time": "Please set the trigger time."
 }
