更新版本檢查 確保設定完成跳出提示可關機

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -46,6 +46,10 @@
   "reset_help": "Notifications may fail under certain circumstances,\nsuch as rebooting, turning on airplane mode.\nWhen notifications fail, you can press the reset button to restore everything to normal.",
   "reset": "reset",
   "currently_executing": "Currently Executing",
+  "system_setup": "System configuration in progress.",
+  "do_not_close_app": "Please do not close the application.",
+  "setup_complete": "Setup complete.",
+  "can_close": "Notification setup complete, you may now close the application.",
   "error_no_settings_made": "No settings made, no need to save.",
   "error_no_plan_name": "Please enter the plan name.",
   "error_no_task_name": "Please enter the task name.",
