--- a/lib/l10n/intl_zh.arb
+++ b/lib/l10n/intl_zh.arb
@@ -46,6 +46,10 @@
   "reset_help": "通知會在某些狀況下失靈,\n像是重開機,開飛航\n當通知失靈後可以按下重設按鈕讓一切恢復正常",
   "reset": "重設",
   "currently_executing": "現正執行",
+  "system_setup": "系統設定中",
+  "do_not_close_app": "請勿關閉應用程式",
+  "setup_complete": "設定完成",
+  "can_close": "通知已設定完成 您可以關閉應用程式",
   "error_no_settings_made": "無任何設定無須儲存",
   "error_no_plan_name": "請輸入計畫名稱",
   "error_no_task_name": "請輸入任務名稱",
